Fix for Overlap in the Guide page

--- a/src/scss/components/content-tabs.scss
+++ b/src/scss/components/content-tabs.scss
@@ -82,3 +82,8 @@
 #data-tab-content-trainee {
   display: block;
 }
+
+// Exeptions on the form guide
+#form-Guide #gesinn-custom-tabs {
+  display: block;
+}
